--- a/plugins/multiproject/multiproject/project/admin/templates/admin_basics_replacement.html
+++ b/plugins/multiproject/multiproject/project/admin/templates/admin_basics_replacement.html
@@ -14,9 +14,21 @@
 <h2>Basic Settings</h2>
 
 <div id="content">
-    <form class="mod" id="modbasic" method="post" action="">
+    <form class="mod" enctype="multipart/form-data" id="modbasic" method="post" action="">
         <fieldset>
             <table class="content">
+                <tr>
+                    <td class="label"></td>
+                    <td class="content">
+                        <label for="icon"><img src="${mproject.icon_url}" height="${icon_size.height}" width="${icon_size.width}" /></label>
+                        <input id="icon" type="file" name="icon" value="" />
+                        <input id="delicon" type="button" name="delicon" value="Reset" />
+                        <p class="desc">
+                        Project icon shown as a project identifier. Note that everyone can see the project icon despite
+                        the permissions.
+                        </p>
+                    </td>
+                </tr>
                 <tr>
                     <td class="label"><label for="projectname">Name:</label></td>
                     <td class="content">
