--- a/plugins/multiproject/multiproject/common/featured/templates/multiproject_featured.html
+++ b/plugins/multiproject/multiproject/common/featured/templates/multiproject_featured.html
@@ -8,7 +8,7 @@
         </h2>
         <ul class="projectlist">
             <li py:for="project in featured_projects" class="single_line">
-                <img class="icon" src="${req.href('projecticon', environment_name=project.name)}" />
+                <img class="icon" src="${project.icon_url}" />
                 <a href="${req.href('..', project.name)}">${project.project_name}</a>
             </li>
             <li py:if="not featured_projects">No project highlights, at the moment.</li>
