--- a/plugins/multiproject/multiproject/home/frontpage/templates/list_my_projects.html
+++ b/plugins/multiproject/multiproject/home/frontpage/templates/list_my_projects.html
@@ -13,14 +13,7 @@ from multiproject.core.configuration import conf
 <py:def function="list_my_projects(projects)">
      <li class="project_list_item" py:for="project in projects">
         <div class="logo">
-            <py:choose>
-                <py:when test="project.icon_id">
-                    <img  src="${req.base_path}/projecticon?environment_name=${project.env_name}" style="border:none; display:inline;" id="my_projects_icon" />
-                </py:when>
-                <py:otherwise test="">
-                    <img src="${conf.theme_htdocs_location}/${conf.getThemePath()}images/d/Projects-icon.png" style="border:none; display:inline;" />
-                </py:otherwise>
-            </py:choose>
+            <img src="${project.icon_url}" id="my_projects_icon" />
         </div>
         <div>
             <div class="my_projects_item_title">
