Worked on #1639: Crop project icon
- Force icon to be certain size
- Use transparent background for empty space
- Implemented icon reset

--- a/plugins/multiproject/multiproject/project/admin/templates/admin_basics_replacement.html
+++ b/plugins/multiproject/multiproject/project/admin/templates/admin_basics_replacement.html
@@ -22,7 +22,7 @@
                     <td class="content">
                         <label for="icon"><img src="${mproject.icon_url}" height="${icon_size.height}" width="${icon_size.width}" /></label>
                         <input id="icon" type="file" name="icon" value="" />
-                        <input id="delicon" type="button" name="delicon" value="Reset" />
+                        <input id="reset" type="checkbox" name="reset" /><label for="reset">Reset to default icon</label>
                         <p class="desc">
                         Project icon shown as a project identifier. Note that everyone can see the project icon despite
                         the permissions.
