Finalizing #1639: Improved icon instructions
- Improved instructions for setting the project icon
- Removed obsolete code from migration class

--- a/plugins/multiproject/multiproject/project/admin/templates/admin_basics_replacement.html
+++ b/plugins/multiproject/multiproject/project/admin/templates/admin_basics_replacement.html
@@ -24,8 +24,9 @@
                         <input id="icon" type="file" name="icon" value="" />
                         <input id="reset" type="checkbox" name="reset" /><label for="reset">Reset to default icon</label>
                         <p class="desc">
-                        Project icon shown as a project identifier. Note that everyone can see the project icon despite
-                        the permissions.
+                        Project icon shown as a project identifier in project page and listings.
+                        Provided icon will be resized to ${icon_size.width}x${icon_size.height}<br/>
+                        <strong>Note:</strong> Everyone can see the project icon despite given the permissions.
                         </p>
                     </td>
                 </tr>
