--- a/plugins/multiproject/multiproject/home/projectlist/templates/multiproject_recent.html
+++ b/plugins/multiproject/multiproject/home/projectlist/templates/multiproject_recent.html
@@ -8,8 +8,10 @@
         </h2>
         <ul class="projectlist">
             <li py:for="project in recent_projects" class="project_list_item">
-                <img class="icon" src="${req.href('projecticon', environment_name=project.name)}" />
-                <a href="${req.href('..', project.name)}">$project.project_name</a>
+                <a href="${req.href('..', project.env_name)}">
+                    <img class="icon" src="${project.icon_url}" />
+                </a>
+                <a href="${req.href('..', project.env_name)}">$project.project_name</a>
                 <span py:if="project.published">Published on ${project.published.strftime("%Y %B %d")}</span>
                 <span py:if="not project.published">Created on ${project.date.strftime("%Y %B %d")}</span>
             </li>
