--- a/themes/default/templates/theme.html
+++ b/themes/default/templates/theme.html
@@ -41,7 +41,7 @@ def sane(stri):
 
     <h1 class="project_heading" py:if="is_project">
         <a href="${req.base_path}" py:if="mproject">
-            <img src="${mproject.icon_url}" id="projecticon" alt="" height="${icon_size.height}" width="${icon_size.width}" />
+            <img src="${mproject.icon_url}" id="projecticon" alt="" height="${icon_size.height if icon_size else ''}" width="${icon_size.width if icon_size else ''}" />
         </a>
         <a href="${req.base_path}">${project.name}</a>
     </h1>
