Fixed #1419: long project titles are shown correctly in the featured projects area

--- a/plugins/multiproject/multiproject/common/featured/templates/multiproject_featured.html
+++ b/plugins/multiproject/multiproject/common/featured/templates/multiproject_featured.html
@@ -7,7 +7,7 @@
             Featured projects
         </h2>
         <ul class="projectlist">
-            <li py:for="project in featured_projects" class="single_line">
+            <li py:for="project in featured_projects" class="timeline_event wiki">
                 <img class="icon" src="${project.icon_url}" />
                 <a href="${req.href('..', project.name)}">${project.project_name}</a>
             </li>
