--- a/plugins/multiproject/multiproject/common/featured/templates/multiproject_featured_admin.html
+++ b/plugins/multiproject/multiproject/common/featured/templates/multiproject_featured_admin.html
@@ -32,17 +32,17 @@
                     <tr py:for="idx, project in enumerate(selected)" class="${idx % 2 and 'odd' or 'even'}">
                         <td>
                             <div>
-                                <select id="projects" name="${project.environment_name}">
+                                <select id="projects" name="${project.env_name}">
                                     <py:for each="value in range(1, maxvalue+1, 1)">
                                         <option value="$value" selected="${project.priority == value or None}">$value</option>
                                     </py:for>
                                     <option value="remove" selected="${project.priority == None or None}">None</option>
                                 </select>
-                                <label for="${project.environment_name}">${project.environment_name}</label>
-                                <input type="hidden" name="projects" value="${project.environment_name}" />
+                                <label for="${project.env_name}">${project.env_name}</label>
+                                <input type="hidden" name="projects" value="${project.env_name}" />
                             </div>
                         </td>
-                        <td><a href="${req.href('..', project.environment_name)}">${project.project_name}</a></td>
+                        <td><a href="${req.href('..', project.env_name)}">${project.project_name}</a></td>
                         <td>${project.description}</td>
                     </tr>
                     </tbody>
