Changed remove btn background and added more padding to group headers.

--- a/plugins/multiproject/multiproject/common/admin/htdocs/css/permissions.css
+++ b/plugins/multiproject/multiproject/common/admin/htdocs/css/permissions.css
@@ -19,6 +19,7 @@ div.group {
 div.group_header {
     background: #ededed;
     margin-bottom: 1em;
+    padding-top: 1em;
 }
 
 div.group_header div.name {
