--- a/themes/default/htdocs/css/ui.css
+++ b/themes/default/htdocs/css/ui.css
@@ -317,6 +317,14 @@ a.blueButton, .blueButton, input[type="submit"], input[type="button"] {
     cursor: pointer;
 }
 
+input[type="submit"].remove_member, input[type="submit"].remove_group, input[type="submit"].remove_permission{
+    background: url("/htdocs/theme/images/remove_btn.png") no-repeat transparent;
+    display: inline-block;
+    border: none;
+    padding: 0 30px 0 10px;
+    cursor: pointer;
+}
+
 a.secondaryButton, .secondaryButton,
 a.greenButton, .greenButton, .greenInputBtn input, .secondaryInputBtn input, input.greenInputBtn, input.secondaryInputBtn {
     background: url("/htdocs/theme/images/buttons.png") no-repeat scroll left top transparent;
